Make Horizontal Calendar View

--- a/FollowMe/app/src/main/res/values/strings.xml
+++ b/FollowMe/app/src/main/res/values/strings.xml
@@ -27,6 +27,11 @@
     <string name="title_mycours">나의코스</string>
     <string name="like_mycourse">내가 찜한 코스</string>
 
+
+    //fragment 모두의 코스
+    <string name="title_course_reco">모두의 코스</string>
+    <string name="category">카테고리</string>
+
     //mypage_string
     <string name="sign_mypage">로그인 및 회원가입</string>
     <string name="sign_text_mypage">로그인 하시고 나만의 코스를 만들어 보세요</string>
